# week-eat-planner

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  docker-compose.yml  md3_audit_report.md
.github/: copilot-instructions.md
.github/prompts/: check-docstrings.prompt.md  fe-test-check.prompt.md  pr-review.prompt.md
.github/skills/brainstorm/: SKILL.md
.github/skills/material-3/: SKILL.md
.github/skills/plannotator-plan/: SKILL.md
.github/skills/reviewer/: SKILL.md
.github/workflows/: autotests.yml  be_linters.yml  be_unittests.yml  fe-linters.yml  fe_linters.yml  fe_unittests.yml  linters.yml
backend/: .env  .env.be_test  Dockerfile  pyproject.toml  settings.py  start.sh
backend/migrations/: env.py
backend/migrations/versions/: 04aa7e4d33b2_wep_25_add_device_fingerprint.py  19ffc920c070_wep_34_expand_user.py  1a8cb1a65a85_add_meals_and_weeks_association.py  500d65785088_migrate_to_uuid7_add_refresh_token.py  64d80c422561_wep_14_add_meal_slot.py  79ee0940e750_wep_72_add_oauth_provider.py  7af49569b980_make_datetime_timezone_aware.py  9646555085ee_initial_revision.py  a553090aea54_add_oauth.py  a9bb0d35c761_wep_59_add_image_key_to_recipes.py  ab69f7fc8c02_wep_38_remove_device_fingerprint.py  aca4e622de12_wep_73_add_user_favorites.py  f52e84e3d972_wep_5_update_recipe_model.py  fa819ba9c0e3_wep_38_add_steps_and_intgredinets_units.py
backend/tests/: __init__.py  conftest.py  conftest_api.py  conftest_mock.py  constants.py  test_config.py  test_helpers.py  test_security.py
backend/tests/api/: conftest.py  test_async_http_client.py  test_auth.py  test_dao.py  test_main.py  test_ping.py  test_recipe.py  test_user.py  test_week.py  test_weeks.py
backend/tests/api/dependencies/: test_recipe_deps.py  test_weeks_deps.py
backend/tests/clients/: test_async_http_client.py  test_google_auth_client.py  test_storage_client.py
backend/tests/db/: conftest.py  test_auth_deps.py  test_base_dao.py  test_dao.py  test_db_models.py  test_db_session_maker.py  test_meal_slot_dao.py  test_refresh_token_dao.py  test_user_dao.py  test_weeks_dao.py  test_weeks_deps.py
backend/tests/dependencies/: test_auth.py  test_auth_deps.py  test_httpx_client_deps.py  test_recipe_deps.py  test_weeks_deps.py
backend/tests/services/: test_auth_service.py  test_recipe_service.py  test_user_service.py  test_week_service.py
backend/week_eat_planner/: config.py  constants.py  exceptions.py  helpers.py  main.py
backend/week_eat_planner/api/: api.py  auth.py  dao.py  monitoring.py  recipe.py  repice.py  routes.py  schemas.py  user.py  week.py  weeks.py
backend/week_eat_planner/api/dependencies/: auth_deps.py  httpx_client_deps.py  recipe_deps.py  storage_deps.py  week_deps.py
backend/week_eat_planner/api/schemas/: __init__.py  common.py  meal_slot.py  recipe.py  token.py  user.py  week.py
backend/week_eat_planner/clients/: async_client.py  google_auth_client.py  storage_client.py
backend/week_eat_planner/dao/: base.py  session_maker.py
backend/week_eat_planner/db/: async_client.py  base.py  dao.py  day_dao.py  meal_slot_dao.py  models.py  recipe_dao.py  refresh_token_dao.py  session_maker.py  user_dao.py  week_dao.py
backend/week_eat_planner/db/models/: __init__.py  meal_slot.py  recipe.py  user.py  user_favorites.py  week.py
backend/week_eat_planner/dependencies/: auth_deps.py  recipe_deps.py  week_deps.py
backend/week_eat_planner/migrations/: env.py
backend/week_eat_planner/migrations/versions/: 1a8cb1a65a85_add_meals_and_weeks_association.py  9646555085ee_initial_revision.py  a553090aea54_add_oauth.py
backend/week_eat_planner/security/: hashing.py  token_provider.py
backend/week_eat_planner/services/: auth_service.py  recipe_service.py  user_service.py  week_service.py
frontend/: .env.fe_test  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  components.json  docker-entrypoint.sh  eslint.config.cjs  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.cjs  postcss.config.ts  tailwind.config.ts  test-script.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.spec.ts  App.vue  AppShell.spec.ts  AppShell.vue  main.js  main.spec.ts  main.ts  style.css  theme.css
frontend/src/__tests__/: App.spec.ts  AppShell.spec.ts  main.spec.ts
frontend/src/api/: auth.ts  client.spec.ts  client.ts  interceptor.ts  mealSlots.ts  recipes.ts  user.ts  weeks.ts
frontend/src/api/__tests__/: auth.spec.ts  client.spec.ts  mealSlots.spec.ts  recipes.spec.ts  user.spec.ts  weeks.spec.ts
frontend/src/api/tests/: client.spec.ts
frontend/src/api/types/: api.ts  index.ts
frontend/src/app/: AppShell.vue  main.spec.ts  main.ts
frontend/src/app/api/: client.ts
frontend/src/app/router/: index.spec.ts  index.ts
frontend/src/assets/: style.css  tailwind.css  theme.css
frontend/src/components/: ErrorNotification.vue  TheError.vue  TheErrorMessage.vue  TheFooter.vue  TheHeader.vue  TheNavigation.vue  TheWeeks.vue  WeeksList.vue
frontend/src/composables/: breadcrumbs.spec.ts  breadcrumbs.ts  useAsyncCall.ts
frontend/src/i18n/: index.ts
frontend/src/layouts/: TheAuthLayout.spec.ts  TheAuthLayout.vue  TheFooter.vue  TheGuestLayout.spec.ts  TheGuestLayout.vue  TheHeader.vue  TheNavigation.vue
frontend/src/lib/: utils.spec.ts  utils.ts
frontend/src/pages/: Home.vue  HomePage.vue  Login.vue  NotFoundPage.vue  PromoPage.vue  Signup.vue  Week.vue  Weeks.vue
frontend/src/router/: index.js  index.spec.ts  index.ts
frontend/src/stores/: auth.ts  clientId.ts  error.spec.ts  error.ts  userAuth.ts  weeks.ts
frontend/src/types/: api.ts  week.ts
qa/: Makefile  pyproject.toml  settings.py
qa/docker/: docker-compose.yml
qa/docker/app/: Dockerfile  nginx.conf  start.sh
qa/docker/nginx/: nginx.conf
qa/tests/: __init__.py  conftest.py
qa/tests/monitoring/: test_ping.py
qa/wep_qa/actions/: __init__.py  assertion_actions.py  base_actions.py  user_actions.py
qa/wep_qa/clients/: __init__.py  api_client.py
(+348 files in other folders)
