[project]
name = "week_eat_planner"
version = "0.0.0"
description = "My Menu Planner app to get a shopping list for a week in a click."
readme = "./README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    "alembic==1.14.0",
    "sqlalchemy[asyncio]==2.0.37",
    "psycopg[binary]==3.2.4",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff>=0.11.6",
    "mypy==1.13.0",
    "types-ujson==5.10.0.20240515"
]

[tool.ruff]
exclude = [
    ".venv*",
    "migrations",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::Warning",
]
addopts = "--tb=short -vv --cov=week_eat_planner --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
plugins = "pydantic.mypy"

exclude = [
    '/test_.*',
]

ignore_missing_imports = true
show_column_numbers = true
show_absolute_path = true

allow_redefinition = true
no_implicit_reexport = true
strict_equality = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

warn_unused_ignores = true
warn_unused_configs = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true

no_implicit_optional = true
